Fixed api Metric Object
